Fix example URLs
- Update .gitignore

--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 
     <ul style="padding: 0; list-style: none; display: flex; gap: 0.5rem; align-items: center;">
       <li>
-        <a href="examples/example1.html">
+        <a href="examples/example1">
             Example 1
         </a>
       </li>
       <li>
-        <a href="examples/example2.html">
+        <a href="examples/example2">
             Example 2
         </a>
       </li>
       <li>
-        <a href="examples/example3.html">
+        <a href="examples/example3">
             Example 3
         </a>
       </li>
