Add basic styles by GPT

--- a/examples/example3/index.html
+++ b/examples/example3/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>PyScript Examples #3</title>
+  <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="https://pyscript.net/releases/2022.12.1/pyscript.css" />
   <script defer src="https://pyscript.net/releases/2022.12.1/pyscript.js"></script>
 </head>
@@ -12,25 +13,23 @@
 
   <main>
     <section>
-
       <div>
-        <label>
-            Your favorite movie: <input id="fav-movie" type="text" value="Iron Man">
-        </label>
-        <br />
-        <label>
-            Number of recommendation: <input id="top-n" type="number" min="1" value="5">
-        </label>
-        <br />
+        <label for="fav-movie">Your favorite movie:</label>
+        <input id="fav-movie" type="text" value="Iron Man">
+      </div>
+      <br />
+      <div>
+        <label for="top-n">Number of recommendations:</label>
+        <input id="top-n" type="number" min="1" value="5">
+      </div>
+      <br />
+      <button id="run-btn" class="py-button" type="submit">
+        Recommend!
+      </button>
+    </section>
+  </main>
 
-        <button id="run-btn" class="py-button" type="submit">
-          Recommend!
-        </button>
-
-      </section>
-    </main>
-
-    <py-script></py-script>
+  <py-script></py-script>
 </body>
 
 </html>
